<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/criminal_intent_fragment_textview_title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criminal_intent_fragment_label_title" />

    <EditText
        android:id="@+id/criminal_intent_fragment_title_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/criminal_intent_fragment_hint_title" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/criminal_intent_fragment_textview_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/criminal_intent_fragment_label_detail" />

    <Button
        android:id="@+id/criminal_intent_fragment_button_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <CheckBox
        android:id="@+id/criminal_intent_fragment_checkbox_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/criminal_intent_fragment_label_solved" />

    <Button
        android:id="@+id/criminal_intent_activity_button_choose_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/criminal_intent_activity_choose_person_button_label" />

    <Button
        android:id="@+id/criminal_intent_activit_button_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/criminal_intent_activity_send_button_label" />

</LinearLayout>
