<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/quiz_question_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/quiz_answer_true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_answer_true" />

        <Button
            android:id="@+id/quiz_answer_false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_answer_fasle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/quiz_answer_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_left"
            android:contentDescription="@string/quiz_answer_previous" />

        <Button
            android:id="@+id/quiz_answer_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:background="@drawable/arrow_right"
            android:contentDescription="@string/quiz_answer_next"/>

    </LinearLayout>

</LinearLayout>